# clarity-loop-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
scripts/: build-windows.mjs  generate-ci-icons.mjs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
