[package]
name = "clarity-loop-desktop"
version = "0.1.0"
description = "Clarity Loop AI Book Studio desktop application"
authors = ["ETL GIS Consulting LLC"]
edition = "2021"
publish = false

[lib]
name = "clarity_loop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"
webbrowser = "1"
